guestbook/iptables_frontend.txt
Chain PREROUTING (policy ACCEPT)
target     prot opt source               destination         
KUBE-SERVICES  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */
DOCKER     all  --  0.0.0.0/0            0.0.0.0/0            ADDRTYPE match dst-type LOCAL

Chain INPUT (policy ACCEPT)
target     prot opt source               destination         

Chain OUTPUT (policy ACCEPT)
target     prot opt source               destination         
KUBE-SERVICES  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service portals */
DOCKER     all  --  0.0.0.0/0           !127.0.0.0/8          ADDRTYPE match dst-type LOCAL

Chain POSTROUTING (policy ACCEPT)
target     prot opt source               destination         
MASQUERADE  all  --  172.17.0.0/16        0.0.0.0/0           
KUBE-POSTROUTING  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes postrouting rules */

Chain DOCKER (2 references)
target     prot opt source               destination         
RETURN     all  --  0.0.0.0/0            0.0.0.0/0           

Chain KUBE-MARK-DROP (0 references)
target     prot opt source               destination         
MARK       all  --  0.0.0.0/0            0.0.0.0/0            MARK or 0x8000

Chain KUBE-MARK-MASQ (6 references)
target     prot opt source               destination         
MARK       all  --  0.0.0.0/0            0.0.0.0/0            MARK or 0x4000

Chain KUBE-NODEPORTS (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ tcp dpt:30001
KUBE-SVC-GYQQTB6TY565JPRW  tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ tcp dpt:30001

Chain KUBE-POSTROUTING (1 references)
target     prot opt source               destination         
MASQUERADE  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service traffic requiring SNAT */ mark match 0x4000/0x4000

Chain KUBE-SEP-7MTUNS5LT5SSPVQ7 (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.17.0.4           0.0.0.0/0            /* default/frontend: */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ tcp to:172.17.0.4:80

Chain KUBE-SEP-KVAACSCI6SFFCKIQ (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.17.0.5           0.0.0.0/0            /* default/frontend: */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ tcp to:172.17.0.5:80

Chain KUBE-SEP-O2Q5ZW2WPHJUOMAF (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.17.0.2           0.0.0.0/0            /* default/frontend: */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ tcp to:172.17.0.2:80

Chain KUBE-SEP-STT7AQUOXLBR3UKA (2 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  192.168.2.107        0.0.0.0/0            /* default/kubernetes:https */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */ recent: SET name: KUBE-SEP-STT7AQUOXLBR3UKA side: source mask: 255.255.255.255 tcp to:192.168.2.107:6443

Chain KUBE-SEP-WDRMCM7Z2WY5NV3K (1 references)
target     prot opt source               destination         
KUBE-MARK-MASQ  all  --  172.17.0.3           0.0.0.0/0            /* default/redis-master: */
DNAT       tcp  --  0.0.0.0/0            0.0.0.0/0            /* default/redis-master: */ tcp to:172.17.0.3:6379

Chain KUBE-SERVICES (2 references)
target     prot opt source               destination         
KUBE-SVC-NPX46M4PTMTKRN6Y  tcp  --  0.0.0.0/0            10.254.0.1           /* default/kubernetes:https cluster IP */ tcp dpt:443
KUBE-SVC-7GF4BJM3Z6CMNVML  tcp  --  0.0.0.0/0            10.254.179.171       /* default/redis-master: cluster IP */ tcp dpt:6379
KUBE-SVC-GYQQTB6TY565JPRW  tcp  --  0.0.0.0/0            10.254.121.96        /* default/frontend: cluster IP */ tcp dpt:80
KUBE-NODEPORTS  all  --  0.0.0.0/0            0.0.0.0/0            /* kubernetes service nodeports; NOTE: this must be the last rule in this chain */ ADDRTYPE match dst-type LOCAL

Chain KUBE-SVC-7GF4BJM3Z6CMNVML (1 references)
target     prot opt source               destination         
KUBE-SEP-WDRMCM7Z2WY5NV3K  all  --  0.0.0.0/0            0.0.0.0/0            /* default/redis-master: */

Chain KUBE-SVC-GYQQTB6TY565JPRW (2 references)
target     prot opt source               destination         
KUBE-SEP-O2Q5ZW2WPHJUOMAF  all  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ statistic mode random probability 0.33332999982
KUBE-SEP-7MTUNS5LT5SSPVQ7  all  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */ statistic mode random probability 0.50000000000
KUBE-SEP-KVAACSCI6SFFCKIQ  all  --  0.0.0.0/0            0.0.0.0/0            /* default/frontend: */

Chain KUBE-SVC-NPX46M4PTMTKRN6Y (1 references)
target     prot opt source               destination         
KUBE-SEP-STT7AQUOXLBR3UKA  all  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */ recent: CHECK seconds: 10800 reap name: KUBE-SEP-STT7AQUOXLBR3UKA side: source mask: 255.255.255.255
KUBE-SEP-STT7AQUOXLBR3UKA  all  --  0.0.0.0/0            0.0.0.0/0            /* default/kubernetes:https */
